exports[`(.not).toHaveUnsupportedMediaTypeStatus > using axios > .not.toHaveUnsupportedMediaTypeStatus > fails when response have status code 415 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveUnsupportedMediaTypeStatus()</intensity>

Expected status code to not be 415 received:
  <red>415</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 415,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveUnsupportedMediaTypeStatus > using axios > .toHaveUnsupportedMediaTypeStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveUnsupportedMediaTypeStatus()</intensity>

Expected status code to be 415 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveUnsupportedMediaTypeStatus > using got > .not.toHaveUnsupportedMediaTypeStatus > fails when response have status code 415 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveUnsupportedMediaTypeStatus()</intensity>

Expected status code to not be 415 received:
  <red>415</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 415,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveUnsupportedMediaTypeStatus > using got > .toHaveUnsupportedMediaTypeStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveUnsupportedMediaTypeStatus()</intensity>

Expected status code to be 415 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
